--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<h1>Files</h1>
 
 <table>
   <thead>
@@ -13,7 +13,7 @@
   <tbody>
     <% @posts.each do |post| %>
       <tr>
-        <td><%= post.image_data %></td>
+        <td><%= image_tag post.image_url %></td>
         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
@@ -24,4 +24,4 @@
 
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<%= link_to 'New File', new_post_path %>
